change website title

--- a/playground/public/index.html
+++ b/playground/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="OK"
     />
-    <title>Typescript Playgrund</title>
+    <title>useNfc Playgrund</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
